--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<head>
 <title>hello young </title>
 <meta charset="utf-8">
 <!doctype html>
@@ -6,8 +7,17 @@
 target="=_blank" title="html5 specification">
 html specification</a>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N4EVGTC47Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-N4EVGTC47Q');
+</script>
+ 
+</head>
  <h1> WEB </h1>
 <ol>
   <li> <a href="2.html">HTML</li>
